--- a/dockerfiles/ubuntu/apim/Dockerfile
+++ b/dockerfiles/ubuntu/apim/Dockerfile
@@ -84,4 +84,4 @@ ENV JAVA_HOME=${JAVA_HOME} \
 EXPOSE 8280 8243 9763 9443 9099 5672 9711 9611 7711 7611 10397
 
 # intate container and start WSO2 Carbon server
-ENTRYPOINT ${WSO2_SERVER_HOME}/bin/wso2server.sh
+ENTRYPOINT ${WORKING_DIRECTORY}/init.sh
