--- a/dockerfiles/ubuntu/apim/key-manager/Dockerfile
+++ b/dockerfiles/ubuntu/apim/key-manager/Dockerfile
@@ -17,13 +17,13 @@
 # ------------------------------------------------------------------------
 
 # set to product base image
-FROM wso2am-base:2.6.0
+FROM wso2am-base:2.5.0
 
 # copy entrypoint bash script to user home
 COPY --chown=wso2carbon:wso2 init.sh ${WORKING_DIRECTORY}/
 
 # expose API Manager Key Manager ports
-#EXPOSE 8280 8243 9099 9711 9611 7711 7611 10397
+EXPOSE 9443 9763
 
 # set entrypoint to init script
 ENTRYPOINT ["/home/wso2carbon/init.sh"]
