--- a/dockerfiles/ubuntu/apim/traffic-manager/Dockerfile
+++ b/dockerfiles/ubuntu/apim/traffic-manager/Dockerfile
@@ -17,13 +17,17 @@
 # ------------------------------------------------------------------------
 
 # set to product base image
-FROM wso2am-base:2.6.0
+FROM wso2am-base:2.5.0
 
 # copy entrypoint bash script to user home
 COPY --chown=wso2carbon:wso2 init.sh ${WORKING_DIRECTORY}/
 
+# set temporary location for shared artifacts
+RUN mkdir -p ${WORKING_DIRECTORY}/wso2-tmp/ && \
+    cp -r ${WSO2_SERVER_HOME}/repository/deployment/server ${WORKING_DIRECTORY}/wso2-tmp/server
+
 # expose broker ports
-EXPOSE 8280 8243 9099 9711 9611 7711 7611 10397 5672
+EXPOSE 9443 9763 9711 9611 7711 7611 5672
 
 # set entrypoint to init script
 ENTRYPOINT ["/home/wso2carbon/init.sh"]
