Add support for passing arguments at WSO2 APIM and related product server startup in the Docker images

--- a/dockerfiles/ubuntu/apim/Dockerfile
+++ b/dockerfiles/ubuntu/apim/Dockerfile
@@ -85,4 +85,4 @@ ENV JAVA_HOME=${JAVA_HOME} \
 EXPOSE 8280 8243 9763 9443 9099 5672 9711 9611 7711 7611 10397
 
 # initiate container and start WSO2 Carbon server
-ENTRYPOINT ${WORKING_DIRECTORY}/init.sh
+ENTRYPOINT ["/home/wso2carbon/init.sh"]
