Improve Dockerfile comments

--- a/dockerfiles/ubuntu/apim/Dockerfile
+++ b/dockerfiles/ubuntu/apim/Dockerfile
@@ -29,7 +29,7 @@ ARG USER_GROUP_ID=802
 ARG USER_HOME=/home/${USER}
 # set build context dependency directory
 ARG FILES=./files
-# build arguments for wso2 product installation
+# build arguments for WSO2 product installation
 ARG WSO2_SERVER_NAME=wso2am
 ARG WSO2_SERVER_VERSION=2.6.0
 ARG WSO2_SERVER=${WSO2_SERVER_NAME}-${WSO2_SERVER_VERSION}
@@ -50,7 +50,7 @@ RUN \
     && useradd --system --create-home --home-dir ${USER_HOME} --no-log-init -g ${USER_GROUP_ID} -u ${USER_ID} ${USER} \
     && echo '[ ! -z "${TERM}" -a -r /etc/motd ] && cat /etc/motd' >> /etc/bash.bashrc; echo "${MOTD}" > /etc/motd
 
-# create java prefs dir
+# create Java prefs dir
 # this is to avoid warning logs printed by FileSystemPreferences class
 RUN \
     mkdir -p ${USER_HOME}/.java/.systemPrefs \
@@ -58,7 +58,7 @@ RUN \
     && chmod -R 755 ${USER_HOME}/.java \
     && chown -R ${USER}:${USER_GROUP} ${USER_HOME}/.java
 
-# copy the wso2 product distribution to user's home directory
+# copy the WSO2 product distribution to user's home directory
 COPY --chown=wso2carbon:wso2 ${FILES}/${WSO2_SERVER}/ ${WSO2_SERVER_HOME}/
 # copy init script to user home
 COPY --chown=wso2carbon:wso2 docker-entrypoint.sh ${USER_HOME}/
@@ -67,7 +67,7 @@ RUN \
     apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends netcat \
     && rm -rf /var/lib/apt/lists/*
-# add mysql jdbc connector to server home as a third party library
+# add MySQL JDBC connector to server home as a third party library
 ADD --chown=wso2carbon:wso2 http://central.maven.org/maven2/mysql/mysql-connector-java/${MYSQL_CONNECTOR_VERSION}/mysql-connector-java-${MYSQL_CONNECTOR_VERSION}.jar ${WSO2_SERVER_HOME}/repository/components/lib/
 
 # set the user and work directory
